# dont_be_lazy

./: .bitrab-ci.yml  .pydoctest.json  .pylintrc_tests  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.bitrab-ci-scripts/: bandit.sh  check_docs.sh  lint.sh  mypy.sh  pytest.sh
.github/workflows/: create_draft_release.yml  publish_to_pypi.yml  release.yml
docs/: changelog.md  index.md  installation.md
docs/extending/: CONTRIBUTING.md
docs/overview/: README.md
docs/usage/: quickstart.md
dont_be_lazy/: __about__.py  __init__.py  __main__.py  cli.py  config_loader.py  custom_patterns.py  diff.py  git.py  models.py  parallel.py  policy.py  reason.py  registry.py  risk.py  walker.py
dont_be_lazy/commands/: __init__.py  baseline_cmd.py  explain_cmd.py  owners_cmd.py  rules_cmd.py  stale_cmd.py
dont_be_lazy/formatters/: __init__.py  json_fmt.py  markdown_fmt.py  sarif.py  table.py
dont_be_lazy/scanners/: __init__.py  config.py  python_ast.py  python_comments.py
scripts/: basic_checks.sh
spec/: plan.md  spec.md
tests/: test_adversarial.py  test_baseline_cmd.py  test_cli.py  test_config_loader.py  test_config_suppression_cmd.py  test_custom_patterns.py  test_diff.py  test_explain_cmd.py  test_formatters.py  test_git.py  test_hypothesis_properties.py  test_hypothesis_scanner.py  test_list_cmd.py  test_models.py  test_owners_cmd.py  test_parallel.py  test_policy.py  test_refactored_public.py  test_risk.py  test_rules_cmd.py  test_sarif.py  test_scanner_ast.py  test_scanner_comments.py  test_scanner_config.py  test_scanner_config_extended.py  test_scanner_extended.py  test_stale_cmd.py  test_walker.py
tests/fixtures/: sample_comments.py  sample_extended.py  sample_pyproject.toml  sample_safety.yml  sample_tests.py  sample_vulture_whitelist.py
tests/test_suite2/: conftest.py  test_baseline.py  test_cli_logic.py  test_formatters.py  test_policy.py  test_scanners.py
